testk8sDemoService.yaml
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: testk8s
  name: testk8s-service
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: testk8s
