testk8sDemoIngress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-srv
  annotations:
      kubernetes.io/ingress.class: nginx
  namespace: kubernetes-dashboard
spec:
  rules:
    - host: dashboard.com
      http:
        paths:
          -backend:
            serviceName: dashboard-ingress
            servicePort: 80
